K8s/Node/Master/server/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-google
spec:
  type: ExternalName
  ExternalName: google.com
