K8s/Node/Master/server/headless-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-headless-service
  #namespace : my-ns
spec:
  selector:
    app: my-app
  ports:
    - name: http
      port: 80
      targetPort: 80
  clusterIP: None
