K8s/Node/Master/server/load-balencer.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-load-balencer
spec:
  type: LoadBalancer
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 9376
    # nodePort: 31000
