K8s/Node/Master/server/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  #namespace : my-ns
spec:
  selector:
    app: my-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
