K8s/Node/Master/server/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
  namespace: ingress-controller
spec:
  rules:
    - host: demo.test
      http:
        paths:
          - path: /
            backend:
              serviceName: http-test-svc
              servicePort: 80
